# point_cloud_sphere_cut

./: .gitignore  CMakeLists.txt  Makefile  README.md  cutSphereMove.cpp  test_iterations.cpp
include/: Comparison.hpp  CreateSkin.hpp  Cylinder.hpp  GridParameters3d.hpp  PointCloud.hpp  Sphere.hpp  SphereLinearMotion.hpp  Volume.hpp  VolumeGridScanner.hpp  mwTPoint3d.hpp
src/: CreateSkin.cpp  Cylinder.cpp  GridParameters3d.cpp  PointCloud.cpp  Sphere.cpp  SphereLinearMotion.cpp  Volume.cpp  VolumeGridScanner.cpp
test/: testComponents.cpp
